<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_new_releases_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_testimonials"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/menu_testimonials" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_contact_us" />
    </group>
</menu>