<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contact">

    <TextView
        android:id="@+id/tvHomeWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textAlignment="center"
        android:layout_marginVertical="@dimen/layout_margin_vertical"
        app:layout_constraintBottom_toTopOf="@+id/ivLogoSomosMasContact"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLogoSomosMasContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_border_component"
        android:backgroundTint="#6DFFFFFF"
        android:contentDescription="@string/default_content_description"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_mid_margin_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvHomeWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_somos_mas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNameAndSurname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_mid_margin_vertical"
        app:startIconDrawable="@drawable/ic_baseline_emoji_people_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoSomosMasContact">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="50"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_mid_margin_vertical"
        android:hint="@string/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiNameAndSurname"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="40"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_mid_margin_vertical"
        android:hint="@string/contact_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail"
        app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#757575"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMessage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginVertical="@dimen/layout_mid_margin_vertical"
            android:textAlignment="textStart"
            android:hint="@string/contact_message"
            app:counterMaxLength="200"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_sms_24"
            app:layout_constraintTop_toBottomOf="@id/tiPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:minLines="1"
                    android:maxLines="4"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        style="@style/Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
        android:layout_marginBottom="@dimen/layout_margin_vertical"
        android:enabled="false"
        android:text="@string/send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/pbChargingContact"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>