<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.MembersFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_margin_horizontal"
        android:layout_marginVertical="@dimen/card_margin_vertical"
        app:cardBackgroundColor="?attr/colorSecondaryVariant"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/ivMember"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/somos_mas_integrante"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tvMemberName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="@dimen/card_margin_vertical"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    tools:text="Nombre" />

                <TextView
                    android:id="@+id/tvMemberDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="@dimen/card_margin_vertical"
                    android:maxLines="2"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Descripcion" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:contentDescription="@string/facebook_icon"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_fb"
                    app:tint="@color/enabledDark"
                    />

                <ImageButton
                    android:id="@+id/ibLinkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:contentDescription="@string/linkedin_icon"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_linkedin"
                    app:tint="@color/enabledDark"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>